# symproj

./: .gitignore  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
examples/: README.md  embed_and_search.rs  embed_search_rerank.rs  simd_normalize.rs
src/: lib.rs
tests/: proptest_symproj.rs
