[package]
categories = ["science", "algorithms"]
name = "symproj"
version = "0.1.1"
edition = "2021"
description = "Symbolic projection and embeddings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/symproj"
homepage = "https://github.com/arclabs561/symproj"
documentation = "https://docs.rs/symproj"
keywords = ["embeddings", "projection", "vector-search", "codebook"]
authors = ["Arc <attobop@gmail.com>"]

[dependencies]
textprep = { version = "0.1.3" }
thiserror = "2.0"

[dev-dependencies]
innr = "0.2"
rankops = "0.1.4"
vicinity = { version = "0.2", default-features = false, features = ["hnsw"] }
