[package]
categories = ["science", "algorithms"]
name = "symproj"
version = "0.1.3"
edition = "2021"
description = "Codebook-based token-to-vector projection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/symproj"
homepage = "https://github.com/arclabs561/symproj"
documentation = "https://docs.rs/symproj"
keywords = ["embeddings", "projection", "vector-search", "codebook"]
authors = ["Arc <attobop@gmail.com>"]

[workspace]

[dependencies]
textprep = { version = "0.1.3" }
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
innr = "0.6"
rankops = "0.1.8"
vicinity = { version = "0.8", default-features = false, features = ["hnsw"] }
